platform/auth/keycloak/overlays/bp-dsk/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-custom-port
  namespace: auth
spec:
  entryPoints:
    - keycloak
  routes:
    - match: Host(`192.168.1.38`) || Host(`bp-dsk.local`) || Host(`bp-dsk.lan`)
      kind: Rule
      services:
        - name: auth-keycloak
          port: 8080
  tls:
    secretName: auth-tls
